[package]
name = "try_quinn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.21"
quinn = "0.8.3"
rustls = "0.20.6"
rustls-pemfile = "1.0.0"
tokio = { version = "1.19.2", features = ["full"] }
